hphp/hack/test/typecheck/reactive/test_rx_enabled2.php.exp
File "test_rx_enabled2.php", line 13, characters 10-22:
`HH\Rx\IS_ENABLED` must be the only condition in an if-statement, and that if-statement must be the only statement in the function body. (NastCheck[3062])
File "test_rx_enabled2.php", line 29, characters 10-22:
`HH\Rx\IS_ENABLED` must be the only condition in an if-statement, and that if-statement must be the only statement in the function body. (NastCheck[3062])
File "test_rx_enabled2.php", line 44, characters 10-22:
`HH\Rx\IS_ENABLED` must be the only condition in an if-statement, and that if-statement must be the only statement in the function body. (NastCheck[3062])
File "test_rx_enabled2.php", line 49, characters 13-25:
`HH\Rx\IS_ENABLED` must be the only condition in an if-statement, and that if-statement must be the only statement in the function body. (NastCheck[3062])
File "test_rx_enabled2.php", line 55, characters 14-26:
`HH\Rx\IS_ENABLED` must be the only condition in an if-statement, and that if-statement must be the only statement in the function body. (NastCheck[3062])
File "test_rx_enabled2.php", line 61, characters 7-19:
`HH\Rx\IS_ENABLED` must be the only condition in an if-statement, and that if-statement must be the only statement in the function body. (NastCheck[3062])
File "test_rx_enabled2.php", line 69, characters 8-20:
`HH\Rx\IS_ENABLED` must be the only condition in an if-statement, and that if-statement must be the only statement in the function body. (NastCheck[3062])
